--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,33 @@
+
+body {
+  margin:0;
+  padding: 0;
+}
 .tela-inicial {
   width: 100%;
   height: 100vh;
   background: yellow;
+  text-align: center;
+  margin-top: 110px;
+}
+
+.logo{
+  width: 60%;
+  margin-top: 100px;
   
+}
+
+.iniciar{
+  background: blue;
+  font-size: 40px;
+  border: 8px solid blue;
+  margin-top: 120px;
+  color: yellow;
+  padding: 10px 20px 10px 20px;
+}
+
+.tela-pergunta {
+  width: 100%;
+  height: 100vh;
+  background: yellow;
 }
