--- a/estilo.css
+++ b/estilo.css
@@ -29,4 +29,21 @@ body {
   width: 100%;
   height: 100vh;
   background: yellow;
+  text-align: center;
+}
+
+.cerebro {
+  width: 50%;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  
+}
+
+.pergunta {
+  background: white;
+  width: 70%;
+  font-size: 30px;
+  padding: 30px 20px 30px 20px;
+  margin: 0 auto;
+
 }
