--- a/estilo.css
+++ b/estilo.css
@@ -45,5 +45,16 @@ body {
   font-size: 30px;
   padding: 30px 20px 30px 20px;
   margin: 0 auto;
+  
+}
 
+.botao-responder {
+  background: white;
+  padding: 10px 40px 10px 40px;
+  font-size: 25px;
+  border: none;
+  margin-top: 20px;
+}
+.botao-responder:active {
+  background: lightgray;
 }
