--- a/estilo.css
+++ b/estilo.css
@@ -1,8 +1,8 @@
-
 body {
   margin:0;
   padding: 0;
 }
+
 .tela-inicial {
   width: 100%;
   height: 100vh;
@@ -13,7 +13,6 @@ body {
 .logo{
   width: 60%;
   margin-top: 100px;
-  
 }
 
 .iniciar{
@@ -33,10 +32,9 @@ body {
 }
 
 .cerebro {
-  width: 50%;
+  width: 40%;
   margin-top: 50px;
   margin-bottom: 50px;
-  
 }
 
 .pergunta {
@@ -45,7 +43,6 @@ body {
   font-size: 30px;
   padding: 30px 20px 30px 20px;
   margin: 0 auto;
-  
 }
 
 .botao-responder {
@@ -55,6 +52,31 @@ body {
   border: none;
   margin-top: 20px;
 }
+
 .botao-responder:active {
   background: lightgray;
+}
+
+.tela-acertou{
+  width: 100%;
+  height: 100vh;
+  background: yellow;
+  text-align: center;
+}
+
+.acertou{
+  width: 80%;
+  margin-top: 50%;
+}
+
+.tela-errou{
+  width: 100%;
+  height: 100vh;
+  background: yellow;
+  text-align: center;
+}
+
+.errou{
+  width: 80%;
+  margin-top: 50%;
 }
