--- a/estilo.css
+++ b/estilo.css
@@ -32,7 +32,7 @@ body {
 }
 
 .cerebro {
-  width: 40%;
+  width: 30%;
   margin-top: 50px;
   margin-bottom: 50px;
 }
@@ -77,6 +77,18 @@ body {
 }
 
 .errou{
+  width: 80%;
+  margin-top: 50%;
+}
+
+.tela-ganhou{
+  width: 100%;
+  height: 100vh;
+  background: yellow;
+  text-align: center;
+  
+}
+.ganhou{
   width: 80%;
   margin-top: 50%;
 }
